<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <group android:checkableBehavior="single">

        <item android:id="@+id/home"
            android:title="@string/title_activity_profile"
            app:showAsAction="ifRoom"
            android:icon="@drawable/ic_baseline_home_24"
            />

        <item android:id="@+id/addnewledger"
            android:title="@string/profile_menu_content"
            app:showAsAction="ifRoom"
            android:icon="@drawable/add_ledger"
            />

        <item android:id="@+id/addnewvoucher"
            android:title="@string/profile_voucher_content"
            app:showAsAction="ifRoom"
            android:icon="@drawable/voucher_icon"
            />

        <item android:id="@+id/uploadbill"
            android:title="@string/upload_bill"
            app:showAsAction="ifRoom"
            android:icon="@drawable/bill"
            />

    </group>


</menu>