<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:background="@drawable/ledger_recycler_list_border">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_area_for_ledger_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/my_client_list_items_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/client_name_v"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="Subhajit Dey"
                android:textColor="@color/colorPrimaryDark_1_700_op"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/ledger_date_and_time_v"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/currency_sign_v"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins"
                android:text="2017-06-20 8:00 PM"
                android:textColor="@color/colorPrimaryDark_1_600_op"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/client_name_v" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/opening_balance_amount_v"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/client_name_v"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/currency_sign_v"
                android:fontFamily="@font/poppins"
                android:text="3000.00"
                android:textColor="@color/colorPrimaryDark_1_600_op"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/currency_sign_v"
                app:layout_constraintTop_toBottomOf="@+id/ledger_date_and_time_v" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/currency_sign_v"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/client_name_v"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins"
                android:text="@string/currency_sign_indian_rupees"
                android:textColor="@color/colorPrimaryDark_1_600_op"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ledger_date_and_time_v" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/client_type_v"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins"
                android:text="Debit"
                android:textColor="@color/colorPrimaryDark_1_600_op"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/opening_balance_amount_v"
                app:layout_constraintTop_toBottomOf="@+id/ledger_date_and_time_v" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/ledger_number_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins"
                android:text="Ledger No."
                android:textColor="@color/colorPrimaryDark_1_600_op"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@+id/client_name_v"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/ledger_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_bold"
                android:text="ledger_number"
                android:textColor="@color/colorPrimaryDark_1_600_op"
                app:layout_constraintStart_toEndOf="@+id/ledger_number_text"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tools_area_for_edit_ledger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark_1_700"
            app:layout_constraintTop_toBottomOf="@+id/main_area_for_ledger_details"
            tools:layout_editor_absoluteX="0dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/ledger_info_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_edit_24_white" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/nunito"
                android:text="@string/edit_ledger"
                android:textColor="@color/black_180"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ledger_info_image_view" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>



</com.google.android.material.card.MaterialCardView>